[package]
name = "iota-sdk"
version = "1.1.4"
authors = ["IOTA Stiftung"]
edition = "2021"
description = "The IOTA SDK provides developers with a seamless experience to develop on IOTA by providing account abstractions and clients to interact with node APIs."
documentation = "https://wiki.iota.org"
homepage = "https://www.iota.org/"
repository = "https://github.com/iotaledger/iota-sdk"
readme = "README.md"
license = "Apache-2.0"
keywords = ["iota", "tangle", "sdk", "client", "wallet"]
categories = ["cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Mandatory dependencies
bech32 = { version = "0.11.0", default-features = false, features = ["alloc"] }
bitflags = { version = "2.5.0", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = [
    "from",
    "from_str",
    "as_ref",
    "deref",
    "deref_mut",
    "display",
    "add",
    "add_assign",
] }
derive_setters = { version = "0.1.6", default-features = false }
getset = { version = "0.1.2", default-features = false }
hashbrown = { version = "0.14.3", default-features = false, features = [
    "ahash",
    "inline-more",
] }
hex = { version = "0.4.3", default-features = false }
iota-crypto = { version = "0.23.1", default-features = false, features = [
    "blake2b",
    "ed25519",
    "bip44",
    "secp256k1",
] }
iterator-sorted = { version = "0.2.0", default-features = false }
packable = { version = "0.11.0", default-features = false, features = [
    "primitive-types",
] }
paste = { version = "1.0.14", default-features = false }
prefix-hex = { version = "0.7.1", default-features = false, features = [
    "primitive-types",
] }
primitive-types = { version = "0.12.2", default-features = false }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.115", default-features = false, features = [
    "alloc",
] }
strum = { version = "0.26.2", default-features = false, features = ["derive"] }

# Optional dependencies
anymap = { version = "0.12.1", default-features = false, optional = true }
async-trait = { version = "0.1.79", default-features = false, optional = true }
bs58 = { version = "0.5.1", default-features = false, optional = true }
fern-logger = { version = "0.5.0", default-features = false, optional = true }
futures = { version = "0.3.30", default-features = false, features = [
    "thread-pool",
], optional = true }
instant = { version = "0.1.12", default-features = false, optional = true }
iota-ledger-nano = { version = "1.0.4-alpha.3", default-features = false, features = [
    "nova",
], optional = true }
iota_stronghold = { version = "2.0.0", default-features = false, optional = true }
log = { version = "0.4.21", default-features = false, optional = true }
once_cell = { version = "1.19.0", default-features = false, optional = true }
rand = { version = "0.8.5", default-features = false, features = [
    "min_const_gen",
], optional = true }
regex = { version = "1.10.4", default-features = false, features = [
    "unicode-perl",
], optional = true }
reqwest = { version = "0.12.2", default-features = false, features = [
    "json",
    "http2",
], optional = true }
rocksdb = { version = "0.22.0", default-features = false, features = [
    "lz4",
], optional = true }
rumqttc = { version = "0.24.0", default-features = false, features = [
    "websocket",
], optional = true }
serde_repr = { version = "0.1.18", default-features = false, optional = true }
thiserror = { version = "1.0.58", default-features = false, optional = true }
time = { version = "0.3.34", default-features = false, features = [
    "serde",
    "macros",
], optional = true }
url = { version = "2.5.0", default-features = false, features = [
    "serde",
], optional = true }
zeroize = { version = "1.7.0", default-features = false, features = [
    "zeroize_derive",
], optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.36.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
], optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
gloo-storage = { version = "0.3.0", default-features = false, optional = true }
gloo-timers = { version = "0.3.0", default-features = false, features = [
    "futures",
] }
instant = { version = "0.1.12", default-features = false, features = [
    "wasm-bindgen",
], optional = true }
lazy_static = { version = "1.4.0", default-features = false }
tokio = { version = "1.36.0", default-features = false, features = [
    "macros",
    "rt",
    "time",
    "sync",
], optional = true }
wasm-bindgen-futures = { version = "0.4.42", default-features = false, optional = true }

[dev-dependencies]
iota-sdk = { path = ".", default-features = false, features = ["rand"] }
pretty_assertions = { version = "1.4.0", default-features = false, features = [
    "alloc",
] }

dotenvy = { version = "0.15.7", default-features = false }
fern-logger = { version = "0.5.0", default-features = false }
num_cpus = { version = "1.16.0", default-features = false }
once_cell = { version = "1.19.0", default-features = false }
regex = { version = "1.10.4", default-features = false }
time = { version = "0.3.34", default-features = false }
tokio = { version = "1.36.0", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
    "sync",
    "fs",
] }

[features]
default = ["client", "wallet", "tls"]
irc_27 = ["serde", "dep:url"]
irc_30 = ["serde", "dep:url"]
ledger_nano = ["dep:iota-ledger-nano"]
mqtt = ["std", "tls", "dep:regex", "dep:rumqttc", "dep:once_cell"]
participation = ["storage"]
protocol_parameters_samples = ["std", "dep:time"]
rocksdb = ["storage", "dep:rocksdb"]
serde = [
    "hashbrown/serde",
    "packable/serde",
    "primitive-types/serde_no_std",
    "iota-crypto/serde",
    "zeroize?/serde",
    "dep:serde_repr",
]
std = [
    "packable/std",
    "prefix-hex/std",
    "primitive-types/std",
    "bech32/std",
    "bitflags/std",
    "strum/std",
    "rand?/std_rng",
    "regex?/std",
    "iota_stronghold?/std",
    "iota-crypto/std",
    "once_cell?/std",
    "dep:instant",
]
storage = ["iota-crypto/chacha", "dep:time", "dep:anymap", "dep:once_cell"]
stronghold = [
    "iota-crypto/chacha",
    "dep:iota_stronghold",
    "dep:time",
    "dep:anymap",
    "dep:once_cell",
]
tls = ["reqwest?/rustls-tls", "rumqttc?/use-rustls"]
events = []
private_key_secret_manager = ["dep:bs58"]

client = [
    "std",
    "serde",
    "iota-crypto/bip39",
    "iota-crypto/bip39-en",
    "iota-crypto/keccak",
    "iota-crypto/random",
    "iota-crypto/slip10",
    "dep:async-trait",
    "dep:futures",
    "dep:log",
    "dep:reqwest",
    "dep:thiserror",
    "dep:tokio",
    "dep:url",
    "dep:zeroize",
]
wallet = ["client"]

# Ed25519 Examples

[[example]]
name = "sign_and_verify_ed25519"
path = "examples/how_tos/sign_and_verify_ed25519/sign_ed25519.rs"
required-features = ["wallet", "stronghold"]

[[example]]
name = "verify_ed25519_signature"
path = "examples/how_tos/sign_and_verify_ed25519/verify_ed25519_signature.rs"

# Accounts and Addresses Examples

[[example]]
name = "create_mnemonic"
path = "examples/how_tos/wallet/create_mnemonic.rs"
required-features = ["client"]

[[example]]
name = "create_wallet"
path = "examples/how_tos/wallet/create_wallet.rs"
required-features = ["rocksdb", "stronghold"]

[[example]]
name = "check_balance"
path = "examples/how_tos/wallet/check_balance.rs"
required-features = ["rocksdb", "stronghold"]

[[example]]
name = "list_transactions"
path = "examples/how_tos/wallet/list_transactions.rs"
required-features = ["rocksdb", "stronghold"]

[[example]]
name = "list_outputs"
path = "examples/how_tos/wallet/list_outputs.rs"
required-features = ["rocksdb", "stronghold"]

[[example]]
name = "consolidate_outputs"
path = "examples/how_tos/wallet/consolidate_outputs.rs"
required-features = ["wallet", "stronghold"]

# Simple Transaction Examples

[[example]]
name = "request_funds"
path = "examples/how_tos/simple_transaction/request_funds.rs"
required-features = ["rocksdb", "stronghold"]

[[example]]
name = "simple_transaction"
path = "examples/how_tos/simple_transaction/simple_transaction.rs"
required-features = ["rocksdb", "stronghold"]

# Advanced Transactions Examples

[[example]]
name = "send_micro_transaction"
path = "examples/how_tos/advanced_transactions/send_micro_transaction.rs"
required-features = ["rocksdb", "stronghold"]

[[example]]
name = "advanced_transaction"
path = "examples/how_tos/advanced_transactions/advanced_transaction.rs"
required-features = ["rocksdb", "stronghold"]

[[example]]
name = "claim_transaction"
path = "examples/how_tos/advanced_transactions/claim_transaction.rs"
required-features = ["rocksdb", "stronghold"]

# NFT Collection Examples

[[example]]
name = "mint_issuer_nft"
path = "examples/how_tos/nft_collection/00_mint_issuer_nft.rs"
required-features = ["wallet", "storage", "stronghold"]

[[example]]
name = "mint_collection_nft"
path = "examples/how_tos/nft_collection/01_mint_collection_nft.rs"
required-features = ["wallet", "stronghold", "irc_27"]

# Native Tokens Examples

[[example]]
name = "create_native_token"
path = "examples/how_tos/native_tokens/create.rs"
required-features = ["rocksdb", "stronghold", "irc_30"]

[[example]]
name = "destroy_foundry"
path = "examples/how_tos/native_tokens/destroy_foundry.rs"
required-features = ["rocksdb", "stronghold"]

[[example]]
name = "burn_native_token"
path = "examples/how_tos/native_tokens/burn.rs"
required-features = ["rocksdb", "stronghold"]

[[example]]
name = "melt_native_token"
path = "examples/how_tos/native_tokens/melt.rs"
required-features = ["rocksdb", "stronghold"]

[[example]]
name = "mint_native_token"
path = "examples/how_tos/native_tokens/mint.rs"
required-features = ["rocksdb", "stronghold"]

[[example]]
name = "send_native_tokens"
path = "examples/how_tos/native_tokens/send.rs"
required-features = ["rocksdb", "stronghold"]

# Account Output Examples

[[example]]
name = "account_output_request_funds"
path = "examples/how_tos/account_output/request_funds.rs"
required-features = ["rocksdb", "stronghold"]

[[example]]
name = "account_output_send_amount"
path = "examples/how_tos/account_output/send_amount.rs"
required-features = ["rocksdb", "stronghold"]

[[example]]
name = "create_account_output"
path = "examples/how_tos/account_output/create.rs"
required-features = ["wallet", "stronghold"]

[[example]]
name = "destroy_account_output"
path = "examples/how_tos/account_output/destroy.rs"
required-features = ["wallet", "stronghold"]

[[example]]
name = "implicit_account_creation_address"
path = "examples/how_tos/account_output/implicit_account_creation_address.rs"
required-features = ["wallet", "storage"]

# Outputs

[[example]]
name = "output_unlock_conditions"
path = "examples/how_tos/outputs/unlock_conditions.rs"
required-features = ["client"]

[[example]]
name = "output_features"
path = "examples/how_tos/outputs/features.rs"
required-features = ["client"]

# Client Examples

[[example]]
name = "get_health"
path = "examples/how_tos/client/get_health.rs"

[[example]]
name = "get_info"
path = "examples/how_tos/client/get_info.rs"
required-features = ["serde"]

[[example]]
name = "get_outputs"
path = "examples/how_tos/client/get_outputs.rs"

# Block examples

[[example]]
name = "block_no_payload"
path = "examples/client/block/00_block_no_payload.rs"
required-features = ["client"]

[[example]]
name = "block_confirmation_time"
path = "examples/client/block/01_block_confirmation_time.rs"
required-features = ["client"]

[[example]]
name = "block_custom_parents"
path = "examples/client/block/02_block_custom_parents.rs"
required-features = ["client"]

[[example]]
name = "block_custom_payload"
path = "examples/client/block/03_block_custom_payload.rs"
required-features = ["client"]

[[example]]
name = "block_tagged_data"
path = "examples/client/block/04_block_tagged_data.rs"
required-features = ["client"]

# High Level examples

[[example]]
name = "get_transaction_inputs"
path = "examples/client/high_level/get_transaction_inputs.rs"
required-features = ["client"]

[[example]]
name = "search_address"
path = "examples/client/high_level/search_address.rs"
required-features = ["client"]

# Node API core examples

[[example]]
name = "node_api_core_get_routes"
path = "examples/client/node_api_core/01_get_routes.rs"
required-features = ["client"]

[[example]]
name = "node_api_core_get_issuance"
path = "examples/client/node_api_core/03_get_issuance.rs"
required-features = ["client"]

[[example]]
name = "node_api_core_post_block"
path = "examples/client/node_api_core/04_post_block.rs"
required-features = ["client"]

[[example]]
name = "node_api_core_post_block_raw"
path = "examples/client/node_api_core/05_post_block_raw.rs"
required-features = ["client"]

[[example]]
name = "node_api_core_get_block"
path = "examples/client/node_api_core/06_get_block.rs"
required-features = ["client"]

[[example]]
name = "node_api_core_get_block_raw"
path = "examples/client/node_api_core/07_get_block_raw.rs"
required-features = ["client"]

[[example]]
name = "node_api_core_get_block_metadata"
path = "examples/client/node_api_core/08_get_block_metadata.rs"
required-features = ["client"]

[[example]]
name = "node_api_core_get_output"
path = "examples/client/node_api_core/09_get_output.rs"
required-features = ["client"]

[[example]]
name = "node_api_core_get_output_raw"
path = "examples/client/node_api_core/10_get_output_raw.rs"
required-features = ["client"]

[[example]]
name = "node_api_core_get_output_metadata"
path = "examples/client/node_api_core/11_get_output_metadata.rs"
required-features = ["client"]

[[example]]
name = "node_api_core_get_output_full"
path = "examples/client/node_api_core/12_get_output_full.rs"
required-features = ["client"]

[[example]]
name = "node_api_core_get_included_block"
path = "examples/client/node_api_core/15_get_included_block.rs"
required-features = ["client"]

[[example]]
name = "node_api_core_get_included_block_raw"
path = "examples/client/node_api_core/16_get_included_block_raw.rs"
required-features = ["client"]

[[example]]
name = "node_api_core_get_validators"
path = "examples/client/node_api_core/get_validators.rs"
required-features = ["client"]

# Node API indexer examples

[[example]]
name = "node_api_indexer_get_account_output"
path = "examples/client/node_api_indexer/01_get_account_output.rs"
required-features = ["client"]

[[example]]
name = "node_api_indexer_get_account_outputs"
path = "examples/client/node_api_indexer/02_get_account_outputs.rs"
required-features = ["client"]

[[example]]
name = "node_api_indexer_get_foundry_output"
path = "examples/client/node_api_indexer/03_get_foundry_output.rs"
required-features = ["client"]

[[example]]
name = "node_api_indexer_get_foundry_outputs"
path = "examples/client/node_api_indexer/04_get_foundry_outputs.rs"
required-features = ["client"]

[[example]]
name = "node_api_indexer_get_nft_output"
path = "examples/client/node_api_indexer/05_get_nft_output.rs"
required-features = ["client"]

[[example]]
name = "node_api_indexer_get_nft_outputs"
path = "examples/client/node_api_indexer/06_get_nft_outputs.rs"
required-features = ["client"]

[[example]]
name = "node_api_indexer_get_random_basic_outputs"
path = "examples/client/node_api_indexer/07_get_random_basic_outputs.rs"
required-features = ["client"]

#######

[[example]]
name = "01_generate_addresses"
path = "examples/client/01_generate_addresses.rs"
required-features = ["client"]

[[example]]
name = "02_address_balance"
path = "examples/client/02_address_balance.rs"
required-features = ["client"]

[[example]]
name = "07_mqtt"
path = "examples/client/07_mqtt.rs"
required-features = ["client", "mqtt"]

[[example]]
name = "client_config"
path = "examples/client/client_config.rs"
required-features = ["client"]

[[example]]
name = "get_block"
path = "examples/client/get_block.rs"
required-features = ["client"]

[[example]]
name = "client_getting_started"
path = "examples/client/getting_started.rs"
required-features = ["client"]

[[example]]
name = "ledger_nano"
path = "examples/client/ledger_nano.rs"
required-features = ["client", "ledger_nano"]

[[example]]
name = "ledger_nano_transaction"
path = "examples/client/ledger_nano_transaction.rs"
required-features = ["client", "ledger_nano"]

[[example]]
name = "client_logger"
path = "examples/client/logger.rs"
required-features = ["client"]

[[example]]
name = "quorum"
path = "examples/client/quorum.rs"
required-features = ["client"]

[[example]]
name = "stronghold"
path = "examples/client/stronghold.rs"
required-features = ["client", "stronghold"]

[[example]]
name = "build_account_output"
path = "examples/client/output/build_account_output.rs"
required-features = ["client"]

[[example]]
name = "build_nft_output"
path = "examples/client/output/build_nft_output.rs"
required-features = ["client"]

[[example]]
name = "build_basic_output"
path = "examples/client/output/build_basic_output.rs"
required-features = ["client"]

[[example]]
name = "send_all"
path = "examples/client/send_all.rs"
required-features = ["client"]

[[example]]
name = "tagged_data_to_utf8"
path = "examples/client/tagged_data_to_utf8.rs"
required-features = ["client"]

### Wallet

[[example]]
name = "wallet_getting_started"
path = "examples/wallet/getting_started.rs"
required-features = ["stronghold"]

[[example]]
name = "0_generate_address"
path = "examples/wallet/offline_signing/0_generate_address.rs"
required-features = ["wallet", "storage", "stronghold"]

[[example]]
name = "1_prepare_transaction"
path = "examples/wallet/offline_signing/1_prepare_transaction.rs"
required-features = ["wallet", "storage"]

[[example]]
name = "2_sign_transaction"
path = "examples/wallet/offline_signing/2_sign_transaction.rs"
required-features = ["wallet", "stronghold"]

[[example]]
name = "3_send_transaction"
path = "examples/wallet/offline_signing/3_send_transaction.rs"
required-features = ["wallet", "storage"]

[[example]]
name = "mint_nft"
path = "examples/how_tos/nfts/mint_nft.rs"
required-features = ["wallet", "stronghold", "irc_27"]

[[example]]
name = "send_nft"
path = "examples/how_tos/nfts/send_nft.rs"
required-features = ["wallet", "stronghold"]

[[example]]
name = "burn_nft"
path = "examples/how_tos/nfts/burn_nft.rs"
required-features = ["wallet", "stronghold"]

[[example]]
name = "check_unlock_conditions"
path = "examples/wallet/17_check_unlock_conditions.rs"
required-features = ["wallet", "storage"]

[[example]]
name = "background_syncing"
path = "examples/wallet/background_syncing.rs"
required-features = ["wallet", "storage"]

[[example]]
name = "events"
path = "examples/wallet/events.rs"
required-features = ["wallet", "events"]

[[example]]
name = "wallet_ledger_nano"
path = "examples/wallet/ledger_nano.rs"
required-features = ["wallet", "ledger_nano"]

# [[example]]
# name = "wallet_participation"
# path = "examples/wallet/participation.rs"
# required-features = ["wallet", "participation"]

[[example]]
name = "logger"
path = "examples/wallet/logger.rs"
required-features = ["wallet", "storage"]

[[example]]
name = "spammer"
path = "examples/wallet/spammer.rs"
required-features = ["wallet"]

[[example]]
name = "storage"
path = "examples/wallet/storage.rs"
required-features = ["wallet", "storage"]

[[example]]
name = "wallet"
path = "examples/wallet/wallet.rs"
required-features = ["wallet", "storage"]

[[example]]
name = "migrate_stronghold_snapshot_v2_to_v3"
path = "examples/wallet/migrate_stronghold_snapshot_v2_to_v3.rs"
required-features = ["stronghold"]

# Allowed only for examples, denied again in lib.rs
[lints.clippy]
expect_fun_call = "allow"
single_element_loop = "allow"
