[package]
name = "iota-sdk-bindings-core"
version = "0.1.0"
authors = [ "IOTA Stiftung" ]
edition = "2021"
homepage = "https://iota.org"
description = "Bindings core for the IOTA SDK"
license = "Apache-2.0"
publish = false

[dependencies]
iota-sdk = { path = "../../sdk", default-features = false, features = [ "wallet", "tls", "message_interface" ] }

backtrace = { version = "0.3.67", default-features = false }
derivative = { version = "2.2.0", default-features = false }
fern-logger = { version = "0.5.0", default-features = false }
futures =  { version = "0.3.28", default-features = false }
iota-crypto = { version = "0.20.1", default-features = false, features = [ "slip10" ] }
log = { version = "0.4.18", default-features = false }
packable = { version = "0.8.1", default-features = false }
prefix-hex = { version = "0.7.0", default-features = false }
primitive-types = { version = "0.12.1", default-features = false }
serde = { version = "1.0.163", default-features = false }
serde_json = { version = "1.0.96", default-features = false }
thiserror = { version = "1.0.40", default-features = false }
tokio = { version = "1.28.2", default-features = false }
zeroize = { version = "1.6.0", default-features = false }

[features]
events = [ "iota-sdk/events" ]
ledger_nano = [ "iota-sdk/ledger_nano" ]
mqtt = [ "iota-sdk/mqtt" ]
participation = [ "iota-sdk/participation" ]
rocksdb = [ "iota-sdk/rocksdb" ]
storage = [ "iota-sdk/storage" ]
stronghold = [ "iota-sdk/stronghold" ]
